--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ input[type="radio"].visually-hidden {
 
 .button {
   display: inline-block;
+  vertical-align: baseline;
   width: 240px;
   padding: 13px 0;
   color: #ffffff;
@@ -198,8 +199,25 @@ input[type="radio"].visually-hidden {
   color: #fb565a;
 }
 
-.site-navigation a:active {
+.site-navigation a:focus {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.site-navigation a:active {
+  position: relative;
+  color: #000000;
+}
+
+.site-navigation a:active::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 12px;
+  width: 74px;
+  height: 2px;
+  background-color: #fb565a;
+  background-repeat: no-repeat;
 }
 
 .user-navigation {
@@ -278,6 +296,7 @@ input[type="radio"].visually-hidden {
 .slider-controls i {
   position: relative;
   display: inline-block;
+  vertical-align: baseline;
   width: 18px;
   height: 18px;
   padding: 8px;
@@ -481,7 +500,7 @@ input[type="radio"].visually-hidden {
 
 .nerds-picture-wrapper {
   margin-top: 40px;
-  margin-bottom: 33px;
+  margin-bottom: 37px;
   width: 360px;
   height: 208px;
 }
@@ -519,6 +538,7 @@ input[type="radio"].visually-hidden {
   font-weight: bold;
   line-height: 10px;
   text-align: left;
+  margin-bottom: 2px;
 }
 
 .sup {
@@ -535,6 +555,8 @@ input[type="radio"].visually-hidden {
 .great-great-conditions {
   display: flex;
   align-items: flex-start;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .partners {
@@ -591,6 +613,10 @@ input[type="radio"].visually-hidden {
   width: 760px;
 }
 
+.catalog-shop {
+  padding-top: 30px;
+}
+
 .catalog-title {
   text-align: center;
   margin: 0;
@@ -621,13 +647,13 @@ input[type="radio"].visually-hidden {
   flex-wrap: wrap;
   padding: 0;
   list-style: none;
-  margin-bottom: 40px;
+  margin-bottom: -10px;
 }
 
 .catalog-item {
   position: relative;
   width: 360px;
-  margin-bottom: 20px;
+  margin-bottom: 73px;
 }
 
 .catalog-item:nth-child(2n) {
@@ -643,6 +669,23 @@ input[type="radio"].visually-hidden {
   position: relative;
   width: 360px;
   height: 576px;
+}
+
+.catalog-image-wrapper::before {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: 0px;
+  width: 360px;
+  height: 40px;
+  background-image: url("../img/browser.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.12;
+}
+
+.catalog-image-wrapper:hover::before {
+  opacity: 1;
 }
 
 .catalog-popup {
@@ -667,6 +710,15 @@ input[type="radio"].visually-hidden {
   padding-bottom: 25px;
 }
 
+.catalog-popup h3:hover {
+  color: #fb565a;
+}
+
+.catalog-popup h3:focus,
+.catalog-popup h3:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .catalog-popup a {
   color: #000000;
   text-align: center;
@@ -680,6 +732,7 @@ input[type="radio"].visually-hidden {
   color: #666666
 }
 
+/*разметка фильтров*/
 .filters-section {
   display: flex;
   width: 261px;
@@ -702,7 +755,8 @@ input[type="radio"].visually-hidden {
 }
 
 .sort-title {
-  margin-right: 257px;
+  margin-top: -5px;
+  margin-right: 264px;
   font-size: 18px;
   line-height: 18px;
   text-align: left;
@@ -737,6 +791,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
   font-size: 14px;
   line-height: 18px;
+  font-weight: normal;
   text-align: left;
   text-transform: uppercase;
   margin-right: 26px;
@@ -776,7 +831,7 @@ input[type="radio"].visually-hidden {
 .range-controls {
   position: relative;
   height: 41px;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
   padding-top: 39px;
   padding-right: 20px;
   padding-left: 20px;
@@ -810,19 +865,21 @@ input[type="radio"].visually-hidden {
 }
 
 .range-controls .toggle-min {
-  left: 50px;
+  left: 20px;
 }
 
 .range-controls .toggle-max {
-  left: 110px;
+  left: 60%;
 }
 
 .price-controls {
   font-size: 0;
+  margin-bottom: -5px;
 }
 
 .price-controls label {
   display: inline-block;
+  vertical-align: baseline;
   width: 50%;
   font-size: 16px;
   text-transform: uppercase;
@@ -854,11 +911,101 @@ input[type="radio"].visually-hidden {
 }
 
 .grid-fieldset {
-  margin-bottom: 38px;
+  margin-bottom: 41px;
 }
 
 .grid-fieldset legend {
   margin-bottom: 21px;
+}
+
+.filter-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input-radio+label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: -2px;
+  width: 25px;
+  height: 25px;
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.4;
+}
+
+.filter-input-radio+label:hover::before {
+  opacity: 1;
+}
+
+.filter-input-radio+label:disabled::before {
+  opacity: 0.1;
+}
+
+.filter-input-radio:checked+label::before {
+  content: "";
+  position: absolute;
+  left: -36px;
+  top: -2px;
+  width: 25px;
+  height: 25px;
+  background-image: url("../img/radio-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.4;
+}
+
+.filter-input-radio:checked:hover+label::before {
+  opacity: 1;
+}
+
+.filter-input-radio:checked:disabled+label::before {
+  opacity: 0.1;
+}
+
+.filter-input-checkbox+label::before {
+  content: "";
+  position: absolute;
+  left: -34px;
+  top: 0px;
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.4;
+}
+
+.filter-input-checkbox:hover+label::before {
+  opacity: 1;
+}
+
+.filter-input-checkbox:disabled+label::before {
+  opacity: 0.1;
+}
+
+.filter-input-checkbox:checked+label::before {
+  content: "";
+  position: absolute;
+  left: -34px;
+  top: 0px;
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-checkbox:checked:hover+label::before {
+  opacity: 1;
+}
+
+.filter-input-checkbox:checked:disabled+label::before {
+  opacity: 0.1;
 }
 
 .specificities-fieldset {
@@ -869,6 +1016,11 @@ input[type="radio"].visually-hidden {
   margin-bottom: 22px;
 }
 
+.type {
+  margin-top: -3px;
+  margin-left: 35px;
+}
+
 .type li {
   margin-bottom: 15px;
 }
@@ -877,11 +1029,21 @@ input[type="radio"].visually-hidden {
   margin-bottom: 0;
 }
 
+.details {
+  margin-top: -6px;
+  margin-left: 36px;
+}
+
 .details li {
   margin-bottom: 17px;
 }
 
+.details li:nth-child(3) {
+  margin-top: -2px;
+}
+
 .details li:last-child {
+  margin-top: -2px;
   margin-bottom: 0;
 }
 
@@ -908,9 +1070,9 @@ input[type="radio"].visually-hidden {
   display: flex;
   text-align: center;
   padding-top: 16px;
-  padding-right: 20px;
+  padding-right: 19px;
   padding-left: 16px;
-  padding-bottom: 18px;
+  padding-bottom: 15px;
   color: #000000;
   background-color: #eeeeee;
   font-weight: 500;
@@ -934,10 +1096,6 @@ input[type="radio"].visually-hidden {
   color: #000000;
   background-color: #ffffff;
   border: #dbdbdb solid 3px;
-  padding-top: 16px;
-  padding-right: 20px;
-  padding-left: 16px;
-  padding-bottom: 18px;
 }
 
 .pagination-item a[href]:hover {
@@ -956,7 +1114,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
   line-height: 18px;
   text-align: center;
-  padding-top: 19px;
+  padding-top: 17px;
   padding-right: 79px;
   padding-bottom: 19px;
   padding-left: 78px;
@@ -972,7 +1130,7 @@ input[type="radio"].visually-hidden {
 
 .map-wrapper {
   position: relative;
-  width: 1440px;
+  width: 100%;
   height: 416px;
   margin-bottom: 78px;
 }
@@ -998,24 +1156,26 @@ input[type="radio"].visually-hidden {
 }
 
 .write-us-text {
-  padding-top: 54px;
+  padding-top: 48px;
   padding-right: 50px;
   padding-left: 50px;
 }
 
 .write-us-name {
   display: inline-block;
+  vertical-align: baseline;
   text-align: left;
   font-size: 18px;
   font-weight: bold;
   line-height: 30px;
   color: #000000;
   text-transform: uppercase;
-  margin-bottom: 25px;
+  margin-bottom: 21px;
 }
 
 .write-us address {
   line-height: 18px;
+  width: 204px;
   text-align: left;
   font-style: normal;
   color: #666666;
@@ -1027,11 +1187,17 @@ input[type="radio"].visually-hidden {
   font-weight: normal;
   text-align: left;
   color: #666666;
-  padding-bottom: 25px;
+  margin-top: -8px;
+  margin-bottom: 36px;
 }
 
 .main-footer {
-  margin-top: 69px;
+  margin-top: 56px;
+  margin-bottom: 69px;
+}
+
+.main-footer-content {
+  margin-top: -10px;
 }
 
 .footer-social {
@@ -1084,7 +1250,7 @@ input[type="radio"].visually-hidden {
 }
 
 .social-discount {
-  width: 545px;
+  width: 570px;
 }
 
 .social-discount h4 {
@@ -1101,11 +1267,10 @@ input[type="radio"].visually-hidden {
   color: #444444;
   text-align: left;
   font-style: normal;
-  padding-top: 15px;
+  padding-top: 10px;
 }
 
 /*модальное окно*/
-
 /*.popup-email-form {
   display: none;
 }*/
@@ -1149,15 +1314,17 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
   text-align: left;
   background-color: #ffffff;
-  border: 2px solid  #d7dcde;
+  border: 2px solid #d7dcde;
 }
 
 .input-text:hover {
-  border: 2px solid  #b4b9bb;
+  border: 2px solid #b4b9bb;
 }
+
 .input-text:focus {
   border: 2px solid #000000;
 }
+
 .input-text:invalid {
   color: #e74246;
   border: 2px solid #e74246;
